# terminal-snippet-manager

./: .gitignore  LICENSE  Makefile  README.md  README.zh-CN.md  README.zh-TW.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
codesnap/: __init__.py  cli.py  core.py  models.py  storage.py
